# event-store

./: .gitignore  pyproject.toml  requirements.txt
event_generator/: config.py  generator.py
event_generator/event_types/: account_events.py  order_events.py  product_events.py
event_generator/utils/: event_type_utils.py  hash_utils.py
event_store/transformer/: transform.ipynb
