[project]
name = "event-store"
version = "0.1.0"
description = "An event store package on how to build a transformation, storage and access layer using PySpark and the Hadoop ecosystem."
authors = [
    {name = "Aaron Ginder",email = "aaronginder@hotmail.co.uk"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "parquet-tools (>=0.2.16,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false
